@@ -27,8 +27,10 @@
 #' @param h  an integer giving the forecast horizon (defaults to 1).
 #' @param p  an integer giving the number of lags in the model (defaults to 2).
 #' @param sMax  an integer giving the number of predictor series to be 
-#' sequenced.  If it is \code{NA} (the default), predictor groups are sequenced 
-#' as long as there are twice as many observations as predictor variables.
+#' sequenced.  If it is \code{NA} (the default), predictor series are sequenced 
+#' as long as there are twice as many observations as predictor series in case 
+#' of a robust fit, and as long as there are more observations than predictor 
+#' series otherwise.
 #' @param centerFun  a function to compute a robust estimate for the center 
 #' (defaults to \code{\link[stats]{median}}).
 #' @param scaleFun  a function to compute a robust estimate for the scale 
@@ -65,13 +67,15 @@
 #' winsorization (defaults to 0.95).
 #' @param fit  a logical indicating whether to fit submodels along the sequence 
 #' (\code{TRUE}, the default) or to simply return the sequence (\code{FALSE}).
-#' @param s  an integer vector of length two giving the first and last step 
-#' along the sequence for which to compute submodels.  The default is to start 
-#' with a model containing only an intercept (step 0) and iteratively add all 
-#' series along the sequence (step \code{sMax}).  If the second element is 
-#' \code{NA}, predictor groups may be added to the model as long as there are 
-#' twice as many observations as predictor variables.  If only one value is 
-#' supplied, it is recycled.
+#' @param s  an integer vector of length two giving the first and last 
+#' step along the sequence for which to compute submodels.  The default 
+#' is to start with a model containing only an intercept (step 0) and 
+#' iteratively add all series along the sequence (step \code{sMax}).  If 
+#' the second element is \code{NA}, predictor groups may be added to the 
+#' model as long as there are twice as many observations as predictor 
+#' variables in case of a robust fit, and as long as there are more 
+#' observations than predictor variables otherwise.  If only one value 
+#' is supplied, it is recycled.
 #' @param crit  a character string specifying the optimality criterion to be 
 #' used for selecting the final model.  Currently, only \code{"BIC"} for the 
 #' Bayes information criterion is implemented.
