@@ -59,7 +59,9 @@
   \item{sMax}{an integer giving the number of predictor
   groups to be sequenced.  If it is \code{NA} (the
   default), predictor groups are sequenced as long as there
-  are twice as many observations as predictor variables.}
+  are twice as many observations as predictor groups in
+  case of a robust fit, and as long as there are more
+  observations than predictor groups otherwise.}
 
   \item{assign}{an integer vector giving the predictor
   group to which each predictor variable belongs.}
@@ -127,8 +129,10 @@
   all groups along the sequence (step \code{sMax}).  If the
   second element is \code{NA}, predictor groups may be
   added to the model as long as there are twice as many
-  observations as predictor variables.  If only one value
-  is supplied, it is recycled.}
+  observations as predictor variables in case of a robust
+  fit, and as long as there are more observations than
+  predictor variables otherwise.  If only one value is
+  supplied, it is recycled.}
 
   \item{crit}{a character string specifying the optimality
   criterion to be used for selecting the final model.
