@@ -53,8 +53,10 @@
 
   \item{sMax}{an integer giving the number of predictor
   series to be sequenced.  If it is \code{NA} (the
-  default), predictor groups are sequenced as long as there
-  are twice as many observations as predictor variables.}
+  default), predictor series are sequenced as long as there
+  are twice as many observations as predictor series in
+  case of a robust fit, and as long as there are more
+  observations than predictor series otherwise.}
 
   \item{centerFun}{a function to compute a robust estimate
   for the center (defaults to
@@ -118,8 +120,10 @@
   all series along the sequence (step \code{sMax}).  If the
   second element is \code{NA}, predictor groups may be
   added to the model as long as there are twice as many
-  observations as predictor variables.  If only one value
-  is supplied, it is recycled.}
+  observations as predictor variables in case of a robust
+  fit, and as long as there are more observations than
+  predictor variables otherwise.  If only one value is
+  supplied, it is recycled.}
 
   \item{crit}{a character string specifying the optimality
   criterion to be used for selecting the final model.
